force-app/main/default/objects/Properties__c/fields/Appraised_Value__c.field-meta.xml
<CustomField>
    <fullName>Appraised_Value__c</fullName>
    <description>Per most recent closed loan OR current loan if in process</description>
    <inlineHelpText>May reflect current value if Point shows a current loan in process</inlineHelpText>
    <label>Appraised Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>