force-app/main/default/objects/Properties__c/fields/Appraised_Value_of_Most_Recent_Closing__c.field-meta.xml
<CustomField>
    <fullName>Appraised_Value_of_Most_Recent_Closing__c</fullName>
    <formula>Appraised_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appraised Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>