force-app/main/default/objects/Properties__c/fields/Closed_Opportunities_Subject__c.field-meta.xml
<CustomField>
    <fullName>Closed_Opportunities_Subject__c</fullName>
    <label>Closed Opportunities - Subject</label>
    <length>50</length>
    <type>Text</type>
</CustomField>