force-app/main/default/objects/Properties__c/fields/CLTV_of_Most_Recent_Closed_Loan__c.field-meta.xml
<CustomField>
    <fullName>CLTV_of_Most_Recent_Closed_Loan__c</fullName>
    <formula>Most_Recent_Closed_Opportunity__r.CLTV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CLTV</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>