force-app/main/default/objects/Properties__c/fields/Current_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Current_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Active Loan</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Properties</relationshipLabel>
    <relationshipName>Properties</relationshipName>
    <type>Lookup</type>
</CustomField>