force-app/main/default/objects/Properties__c/fields/Days_Since_Most_Recent_Closing__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Most_Recent_Closing__c</fullName>
    <formula>today () - Most_Recent_Closing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Closed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>