force-app/main/default/objects/Properties__c/fields/Encompass_Folder__c.field-meta.xml
<CustomField>
    <fullName>Encompass_Folder__c</fullName>
    <formula>Current_Opportunity__r.Encompass_Folder__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Encompass Folder</label>
    <type>Text</type>
</CustomField>