force-app/main/default/objects/Properties__c/fields/Encompass_Is_Deleted__c.field-meta.xml
<CustomField>
    <fullName>Encompass_Is_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Encompass Is Deleted</label>
    <type>Checkbox</type>
</CustomField>