force-app/main/default/objects/Properties__c/fields/Escrows_Waived_Most_Recent_Closed_Loan__c.field-meta.xml
<CustomField>
    <fullName>Escrows_Waived_Most_Recent_Closed_Loan__c</fullName>
    <formula>Most_Recent_Closed_Opportunity__r.Escrows_Waived_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escrows Waived</label>
    <type>Text</type>
</CustomField>