force-app/main/default/objects/Properties__c/fields/Estimated_Value__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Value__c</fullName>
    <label>Estimated Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>