force-app/main/default/objects/Properties__c/fields/First_Payment_Most_Recent_Closed_Loan__c.field-meta.xml
<CustomField>
    <fullName>First_Payment_Most_Recent_Closed_Loan__c</fullName>
    <formula>Most_Recent_Closed_Opportunity__r.First_Payment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Payment</label>
    <type>Date</type>
</CustomField>