force-app/main/default/objects/Properties__c/fields/Lender_of_Most_Recent_Closing__c.field-meta.xml
<CustomField>
    <fullName>Lender_of_Most_Recent_Closing__c</fullName>
    <formula>TEXT( Most_Recent_Closed_Opportunity__r.Lender__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lender</label>
    <type>Text</type>
</CustomField>