force-app/main/default/objects/Properties__c/fields/Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Loan_Amount__c</fullName>
    <formula>Most_Recent_Closed_Opportunity__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>