force-app/main/default/objects/Properties__c/fields/Loan_Amt_with_MIP_of_Most_Recent_Closing__c.field-meta.xml
<CustomField>
    <fullName>Loan_Amt_with_MIP_of_Most_Recent_Closing__c</fullName>
    <formula>Most_Recent_Closed_Opportunity__r.Loan_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Amt with MIP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>