force-app/main/default/objects/Properties__c/fields/Loan_Anniversary_Date__c.field-meta.xml
<CustomField>
    <fullName>Loan_Anniversary_Date__c</fullName>
    <formula>Most_Recent_Closed_Opportunity__r.Loan_Anniversary_Date__c</formula>
    <label>Loan Anniversary Date</label>
    <type>Date</type>
</CustomField>