force-app/main/default/objects/Properties__c/fields/Loan_Originator_of_Most_Recent_Closing__c.field-meta.xml
<CustomField>
    <fullName>Loan_Originator_of_Most_Recent_Closing__c</fullName>
    <formula>TEXT( Most_Recent_Closed_Opportunity__r.Loan_Originator__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Originator</label>
    <type>Text</type>
</CustomField>