force-app/main/default/objects/Properties__c/fields/Loan_Program_of_Most_Recent_Closing__c.field-meta.xml
<CustomField>
    <fullName>Loan_Program_of_Most_Recent_Closing__c</fullName>
    <formula>TEXT( Most_Recent_Closed_Opportunity__r.Loan_Program__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program</label>
    <type>Text</type>
</CustomField>