force-app/main/default/objects/Properties__c/fields/LTV_of_Most_Recent_Closing__c.field-meta.xml
<CustomField>
    <fullName>LTV_of_Most_Recent_Closing__c</fullName>
    <formula>Most_Recent_Closed_Opportunity__r.LTV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LTV</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>