force-app/main/default/objects/Properties__c/fields/MI_Payment__c.field-meta.xml
<CustomField>
    <fullName>MI_Payment__c</fullName>
    <formula>Most_Recent_Closed_Opportunity__r.Exp_MtgIns_Proposed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MI Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>