force-app/main/default/objects/Properties__c/fields/Most_Recent_Closed_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Closed_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Most Recent Closed Loan</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Most Recent Closed Loan</relationshipLabel>
    <relationshipName>Most_Recent_Closed_Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>