force-app/main/default/objects/Properties__c/fields/Most_Recent_Closing__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Closing__c</fullName>
    <description>This field will pull the close date from the most recently closed opportunity.</description>
    <formula>Most_Recent_Closed_Opportunity__r.CloseDate</formula>
    <label>Closed Date</label>
    <type>Date</type>
</CustomField>