force-app/main/default/objects/Properties__c/fields/Most_Recent_Closing_old__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Closing_old__c</fullName>
    <label>Most Recent Closing (OLD)</label>
    <type>Date</type>
</CustomField>