force-app/main/default/objects/Properties__c/fields/Occupancy_of_Most_Recent_Closing__c.field-meta.xml
<CustomField>
    <fullName>Occupancy_of_Most_Recent_Closing__c</fullName>
    <formula>TEXT( Most_Recent_Closed_Opportunity__r.Occupancy__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Occupancy</label>
    <type>Text</type>
</CustomField>