force-app/main/default/objects/Properties__c/fields/P_I_of_Most_Recent_Closed_Loan__c.field-meta.xml
<CustomField>
    <fullName>P_I_of_Most_Recent_Closed_Loan__c</fullName>
    <formula>Most_Recent_Closed_Opportunity__r.Payment_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>P&amp;I</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>