force-app/main/default/objects/Properties__c/fields/PaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>PaymentAmount__c</fullName>
    <formula>Most_Recent_Closed_Opportunity__r.Payment_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>