force-app/main/default/objects/Properties__c/fields/PITI_of_Most_Recent_Closed_Loan__c.field-meta.xml
<CustomField>
    <fullName>PITI_of_Most_Recent_Closed_Loan__c</fullName>
    <formula>Most_Recent_Closed_Opportunity__r.Exp_Total_Proposed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PITI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>