force-app/main/default/objects/Properties__c/fields/Point_Filename__c.field-meta.xml
<CustomField>
    <fullName>Point_Filename__c</fullName>
    <label>Point Filename</label>
    <length>255</length>
    <type>Text</type>
</CustomField>