force-app/main/default/objects/Properties__c/fields/Property_City__c.field-meta.xml
<CustomField>
    <fullName>Property_City__c</fullName>
    <label>City</label>
    <length>250</length>
    <type>Text</type>
</CustomField>