force-app/main/default/objects/Properties__c/fields/Property_County__c.field-meta.xml
<CustomField>
    <fullName>Property_County__c</fullName>
    <label>County</label>
    <length>75</length>
    <type>Text</type>
</CustomField>