force-app/main/default/objects/Properties__c/fields/Property_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Property_Disposition__c</fullName>
    <label>Property Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>Pending Sale</fullName>
            </value>
            <value>
                <fullName>Rental</fullName>
            </value>
            <value>
                <fullName>Paid in Full</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>