force-app/main/default/objects/Properties__c/fields/Property_ID__c.field-meta.xml
<CustomField>
    <fullName>Property_ID__c</fullName>
    <description>This field will be used to track the unique ID of each property, allowing it to be identified during data loads.</description>
    <externalId>true</externalId>
    <label>Property ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>