force-app/main/default/objects/Properties__c/fields/Property_State__c.field-meta.xml
<CustomField>
    <fullName>Property_State__c</fullName>
    <label>State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>