force-app/main/default/objects/Properties__c/fields/Property_Street__c.field-meta.xml
<CustomField>
    <fullName>Property_Street__c</fullName>
    <label>Street</label>
    <length>250</length>
    <type>Text</type>
</CustomField>