force-app/main/default/objects/Properties__c/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Detached</fullName>
                <default>true</default>
                <label>Detached</label>
            </value>
            <value>
                <fullName>Condominium</fullName>
                <label>Condo</label>
            </value>
            <value>
                <fullName>PUD</fullName>
            </value>
            <value>
                <fullName>Attached</fullName>
            </value>
            <value>
                <fullName>Detached Condominium</fullName>
            </value>
            <value>
                <fullName>Manufactured Home</fullName>
            </value>
            <value>
                <fullName>High Rise Condominium</fullName>
            </value>
            <value>
                <fullName>Modular/Pre-Fab</fullName>
            </value>
            <value>
                <fullName>Cooperative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>