force-app/main/default/objects/Properties__c/fields/PropertyNo__c.field-meta.xml
<CustomField>
    <fullName>PropertyNo__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PropertyNo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>