force-app/main/default/objects/Properties__c/fields/Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Price__c</fullName>
    <description>This field will hold the purchase price of the property.</description>
    <label>Purchase Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>