force-app/main/default/objects/Properties__c/fields/Purchase_Price_of_Most_Recent_Closing__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Price_of_Most_Recent_Closing__c</fullName>
    <formula>Most_Recent_Closed_Opportunity__r.Purchase_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>