force-app/main/default/objects/Properties__c/fields/Purpose_of_Most_Recent_Closing__c.field-meta.xml
<CustomField>
    <fullName>Purpose_of_Most_Recent_Closing__c</fullName>
    <formula>TEXT( Most_Recent_Closed_Opportunity__r.Purpose__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purpose</label>
    <type>Text</type>
</CustomField>