force-app/main/default/objects/Properties__c/fields/Qual_Fico__c.field-meta.xml
<CustomField>
    <fullName>Qual_Fico__c</fullName>
    <formula>Most_Recent_Closed_Opportunity__r.Qual_FICO__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Qual Fico</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>