force-app/main/default/objects/Properties__c/fields/Rate_of_Most_Recent_Closing__c.field-meta.xml
<CustomField>
    <fullName>Rate_of_Most_Recent_Closing__c</fullName>
    <formula>Most_Recent_Closed_Opportunity__r.Interest_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interest Rate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>