force-app/main/default/objects/Properties__c/fields/Scheduled_Balance_of_Most_Recent_Closing__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Balance_of_Most_Recent_Closing__c</fullName>
    <formula>Most_Recent_Closed_Opportunity__r.Current_Schedule_Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduled Bal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>