force-app/main/default/objects/Properties__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Property_ID__c</columns>
    <columns>Household__c</columns>
    <columns>Most_Recent_Closed_Opportunity__c</columns>
    <columns>Most_Recent_Closing__c</columns>
    <columns>Property_Type__c</columns>
    <columns>Occupancy__c</columns>
    <columns>Current_Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>